# b-minus

./: README.md  mkdocs.yml  pyproject.toml
bminus/: __main__.py  environment.py  error.py  evaluate.py  parse.py
bminus/std/: environment.py  j.py  math.py
docs/: index.md  style.css
